--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-	"name" : "chatserver",
-	"description" : "WEPO Chat client assignment",
-	"version" : "0.0.1",
-	"dependencies" : {  
-		"express" : "3.1.0",
-		"socket.io" : "0.9.13"
-	}
+  "name": "chatserver",
+  "description": "WEPO Chat client assignment",
+  "version": "0.0.1",
+  "dependencies": {
+    "express": "3.1.0",
+    "socket.io": "0.9.13"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.2"
+  }
 }
