--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "socket.io": "0.9.13"
   },
   "devDependencies": {
-    "grunt": "~0.4.2"
+    "grunt": "~0.4.2",
+    "grunt-contrib-uglify": "~0.3.2"
   }
 }
